hackathon/solution-part-4/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: widgetario-web-internal
  labels:
    k8sfun.courselabs.co: hackathon
    app: widgetario
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:  
    app: widgetario
    component: web
  type: ClusterIP
